# SCORE

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
analysis/: claims.py  clustering.py  constants.py  contradictions.py  duplicates.py  gaps.py  hallucination.py  models.py  pipeline.py  presenters.py  semantic_graph.py  tasks.py  trace.py  urls.py  views.py  views_audit.py  views_json.py  views_reports.py
api/: auth.py  models.py  urls.py  views_audit.py  views_documents.py  views_results.py  views_score.py  views_tokens.py
chat/: models.py  rag.py  rag_techniques.py  urls.py  views.py
connectors/: __init__.py  base.py  confluence.py  crypto.py  elasticsearch.py  generic.py  models.py  sharepoint.py  urls.py  views.py
dashboard/: admin.py  models.py  scoring.py  urls.py  views.py
docs/: DOCUSCORE_FORMULA.md  INGESTION_AND_ANALYSIS.md  SCORE_FORMULA.md  configuration.md  deployment.md  project-structure.md  stack-and-algorithms.md  technical-reference.md
docuscore/: asgi.py  celery.py  health.py  middleware.py  ratelimit.py  scoring.py  settings.py  urls.py  utils.py  wsgi.py
ingestion/: chunking.py  extraction.py  hashing.py  models.py  pipeline.py  tasks.py
llm/: client.py  prompt_loader.py  prompts.py  prompts_en.py  prompts_rag.py  prompts_rag_en.py
nsg/: __init__.py  cli.py  concepts.py  config.py  graph.py  index.py  persistence.py  stopwords.py
reports/: models.py  pdf.py  urls.py  views.py
score/: asgi.py  celery.py  health.py  issues.py  middleware.py  scoring.py  settings.py  urls.py  utils.py  wsgi.py
scripts/: load_sample_data.py  run_dev.sh
tenants/: adapters.py  admin.py  context_processors.py  middleware.py  models.py  urls.py  views.py
tests/: conftest.py  test_adapters.py  test_analysis_views.py  test_api_audit.py  test_api_auth.py  test_api_documents.py  test_api_results.py  test_api_score.py  test_audit_views.py  test_auth.py  test_chat_views.py  test_chunking.py  test_claims.py  test_claims_extractor.py  test_clustering_engine.py  (+25 more)
(+123 files in other folders)
