[project]
name = "score"
version = "0.1.0"
description = "Enterprise document repository analysis: duplicates, contradictions, gaps"
requires-python = ">=3.12"
dependencies = [
    # Core
    "django>=5.1,<5.2",
    "django-environ>=0.11",
    "django-allauth>=65.0,<67",
    # Async / task queue
    "celery[redis]>=5.4",
    "django-celery-results>=2.5",
    "django-celery-beat>=2.6",
    "sqlalchemy>=2.0",          # Kombu SQLAlchemy transport for DB broker dev mode
    # LLM
    "openai>=1.40",
    "tiktoken>=0.7",
    # Vector store
    "sqlite-vec==0.1.6",
    "numpy>=1.26",
    # ML / clustering
    "scikit-learn>=1.5",
    "hdbscan>=0.8",
    "datasketch>=1.6",          # MinHash for lexical similarity
    # NLP / audit
    "langid>=1.1",
    "rank-bm25>=0.2",
    "nltk>=3.8",
    # Semantic graph (nsg)
    "networkx>=3.1",
    "spacy>=3.5",
    "faiss-cpu>=1.7",
    # Document parsing
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "markdown>=3.6",
    # Config
    "pyyaml>=6.0",
    # HTTP
    "httpx>=0.27",
    # PDF export
    "xhtml2pdf>=0.2.11",
    # Static files
    "whitenoise>=6.7",
    # WSGI server (dev: waitress for Windows, prod: gunicorn in Docker)
    "waitress>=3.0",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    "faker>=22.0",
    "coverage>=7.4",
    "ruff>=0.5",
    "pip-tools>=7.4",
]
sharepoint = [
    "msal>=1.28",
    "office365-rest-python-client>=2.5",
]
confluence = [
    "atlassian-python-api>=3.41",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "score.settings"
python_files = ["tests/*.py", "tests/**/*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = [
    "score*",
    "analysis*",
    "chat*",
    "connectors*",
    "dashboard*",
    "ingestion*",
    "llm*",
    "nsg*",
    "reports*",
    "tenants*",
    "vectorstore*",
]

[tool.ruff]
target-version = "py312"
line-length = 100
